Add mongoose-cpp as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "make-utils"]
 	path = make-utils
 	url = https://github.com/wichtounet/make-utils.git
+[submodule "mongoose-cpp"]
+	path = mongoose-cpp
+	url = https://github.com/Gregwar/mongoose-cpp.git
